--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ logs/*.log
 # Incidents runtime data
 incidents/incidents.json
 incidents/audit_log.json
+backend/src/main/resources/data/*.json
+agent-core/knowledge_base/*.json
 
 # System files
 .DS_Store
@@ -19,3 +21,11 @@ Thumbs.db
 # Java / Maven
 target/
 backend/target/
+
+# UI build output
+ui/node_modules/
+dist/
+
+# IDE files
+.vscode/
+.idea/
