--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,13 +1,29 @@
-FROM node:18-alpine
+# 1️⃣ Build Stage (Node 20)
+FROM node:20-alpine AS build
 
+# 2️⃣ Working directory
 WORKDIR /app
 
+# 3️⃣ Copy package files
 COPY package*.json ./
+
+# 4️⃣ Install dependencies
 RUN npm install
 
+# 5️⃣ Copy everything
 COPY . .
 
-EXPOSE 3000
+# 6️⃣ Build Vite
+RUN npm run build
 
-# Vite dev server with host flag
-CMD ["npm", "run", "dev", "--", "--host"]
+# 7️⃣ Nginx runtime for production
+FROM nginx:alpine
+
+# 8️⃣ Copy build output → nginx
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# 9️⃣ Expose port 80 (container) → app mapped in compose
+EXPOSE 80
+
+# ️⃣ Run nginx
+CMD ["nginx", "-g", "daemon off;"]
